tests/invalid/function_type_missing_parameter.wio
type Callback = fn(i32,) -> void;

fn Entry() -> i32 {
    return 0;
}
